Fixed image alignment

--- a/Verkefni3/styles.css
+++ b/Verkefni3/styles.css
@@ -198,7 +198,7 @@ main ul li img {
 main .images1 {
     vertical-align: top;
     display: inline-block;
-    width: 47%;
+    width: 49%;
     padding-left: 3rem;
 }
 
@@ -211,7 +211,7 @@ main .images2 {
 
 main .images3 {
     display: inline-block;
-    width: 47%;
+    width: 49%;
     padding-left: 3rem;
     padding-top: 0;
 }
